# bloodCellsBioHacks

./: .gitignore  .versionrc.json  BioHacks.ipynb  HelperFunctionsBioHacks.ipynb  README.md  WorksCited.rtf  app.py  changelog.config.js  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: feature_request.yml  issue_request.yml
frontend/templates/: scan.html
notebook/: pyproject.toml
notebook/nb/: nb-001.ipynb  nb-002-randforest.ipynb  nb-003-svm.ipynb  nb-004-ensemble.ipynb  nb-005-labeling.ipynb  nb-006-nonoverfitting.ipynb  nb-007-datafiltering.ipynb  nb-008-data-distribution.ipynb
static/css/: messages.css
templates/: base.html  index.html  scan.html
