[tool.poetry]
name = "notebook"
version = "0.1.0"
description = ""
authors = ["morshoto <jojoto8845@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
kagglehub = "^0.3.9"
numpy = "^2.2.3"
matplotlib = "^3.10.0"
llvmlite = "^0.44.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
